--- a/src/components/Select/styles.module.css
+++ b/src/components/Select/styles.module.css
@@ -46,6 +46,7 @@
 	top: 101%;
 	left: 0;
 	margin: 0;
+	z-index: 1;
 	list-style-type: none;
 	cursor: pointer;
 	border-radius: 4px;
